--- a/index.html
+++ b/index.html
@@ -2,33 +2,63 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>IB Econ SL Resources</title>
+    <title>IB Econ SL Study Hub</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to IB Econ SL Resources!</h1>
-    <p>Organized study materials for exams 🎯</p>
+    <h1>IB Economics SL - Study Hub</h1>
+    <p>Access organized study materials for each unit! 📚</p>
 
-    <h2>Real World Examples</h2>
+    <h2>Unit 1: Microeconomics</h2>
     <ul>
-        <li>Example 1: [placeholder]</li>
-        <li>Example 2: [placeholder]</li>
+        <li>Graphs Slideshow 📈
+            <ul>
+                <li><a href="https://docs.google.com/presentation/d/1Uohvpm72yacg-x83lAxa98nYRIL-a1RlZDrHdSRbNg0/edit?usp=sharing" target="_blank">MCPS Access</a></li>
+                <li><a href="https://outside-link.com" target="_blank">Outside MCPS Access</a></li>
+            </ul>
+        </li>
+        <li>Real World Examples 🌎
+            <ul>
+                <li><a href="https://docs.google.com/presentation/d/1Uohvpm72yacg-x83lAxa98nYRIL-a1RlZDrHdSRbNg0/edit?usp=sharing" target="_blank">MCPS Access</a></li>
+                <li><a href="https://outside-link.com" target="_blank">Outside MCPS Access</a></li>
+            </ul>
+        </li>
     </ul>
 
-    <h2>Key Definitions</h2>
+    <h2>Unit 2: Macroeconomics</h2>
     <ul>
-        <li>Definition 1: [placeholder]</li>
-        <li>Definition 2: [placeholder]</li>
+        <li>Graphs Slideshow 📈
+            <ul>
+                <li><a href="https://docs.google.com/presentation/d/1Uohvpm72yacg-x83lAxa98nYRIL-a1RlZDrHdSRbNg0/edit?usp=sharing" target="_blank">MCPS Access</a></li>
+                <li><a href="https://outside-link.com" target="_blank">Outside MCPS Access</a></li>
+            </ul>
+        </li>
+        <li>Real World Examples 🌎
+            <ul>
+                <li><a href="https://mcps-link.com" target="_blank">MCPS Access</a></li>
+                <li><a href="https://outside-link.com" target="_blank">Outside MCPS Access</a></li>
+            </ul>
+        </li>
     </ul>
 
-    <h2>Diagrams</h2>
+    <h2>Unit 3: Global Economics (includes Development)</h2>
     <ul>
-        <li>Diagram 1: [placeholder]</li>
-        <li>Diagram 2: [placeholder]</li>
+        <li>Graphs Slideshow 📈
+            <ul>
+                <li><a href="https://docs.google.com/presentation/d/1Uohvpm72yacg-x83lAxa98nYRIL-a1RlZDrHdSRbNg0/edit?usp=sharing" target="_blank">MCPS Access</a></li>
+                <li><a href="https://outside-link.com" target="_blank">Outside MCPS Access</a></li>
+            </ul>
+        </li>
+        <li>Real World Examples 🌎
+            <ul>
+                <li><a href="https://mcps-link.com" target="_blank">MCPS Access</a></li>
+                <li><a href="https://outside-link.com" target="_blank">Outside MCPS Access</a></li>
+            </ul>
+        </li>
     </ul>
 
     <footer>
-        <p>Made with 💻 by [Your Name]</p>
+        <p>Made with 💻 by K</p>
     </footer>
 </body>
 </html>
