--- a/index.html
+++ b/index.html
@@ -12,48 +12,48 @@
     <h2>Unit 1: Microeconomics</h2>
     <ul>
         <li>Graphs Slideshow 📈
-            <ul>
-                <li><a href="https://docs.google.com/presentation/d/1Uohvpm72yacg-x83lAxa98nYRIL-a1RlZDrHdSRbNg0/edit?usp=sharing" target="_blank">MCPS Access</a></li>
-                <li><a href="https://outside-link.com" target="_blank">Outside MCPS Access</a></li>
-            </ul>
+            <div class="button-group">
+                <a href="https://docs.google.com/presentation/d/1Uohvpm72yacg-x83lAxa98nYRIL-a1RlZDrHdSRbNg0/edit?usp=sharing" class="button" target="_blank">MCPS Access</a>
+                <a href="https://docs.google.com/presentation/d/1aoAOkSzUQiOwLbhPC5j4qy8V5g0lfF1FvI_xJukEUFQ/edit?usp=sharing" class="button" target="_blank">Outside MCPS Access</a>
+            </div>
         </li>
         <li>Real World Examples 🌎
-            <ul>
-                <li><a href="https://docs.google.com/presentation/d/1Uohvpm72yacg-x83lAxa98nYRIL-a1RlZDrHdSRbNg0/edit?usp=sharing" target="_blank">MCPS Access</a></li>
-                <li><a href="https://outside-link.com" target="_blank">Outside MCPS Access</a></li>
-            </ul>
+            <div class="button-group">
+                <a href="https://mcps-link.com" class="button" target="_blank">MCPS Access</a>
+                <a href="https://outside-link.com" class="button" target="_blank">Outside MCPS Access</a>
+            </div>
         </li>
     </ul>
 
     <h2>Unit 2: Macroeconomics</h2>
     <ul>
         <li>Graphs Slideshow 📈
-            <ul>
-                <li><a href="https://docs.google.com/presentation/d/1Uohvpm72yacg-x83lAxa98nYRIL-a1RlZDrHdSRbNg0/edit?usp=sharing" target="_blank">MCPS Access</a></li>
-                <li><a href="https://outside-link.com" target="_blank">Outside MCPS Access</a></li>
-            </ul>
+            <div class="button-group">
+                <a href="https://docs.google.com/presentation/d/1Uohvpm72yacg-x83lAxa98nYRIL-a1RlZDrHdSRbNg0/edit?usp=sharing" class="button" target="_blank">MCPS Access</a>
+                <a href="https://docs.google.com/presentation/d/1aoAOkSzUQiOwLbhPC5j4qy8V5g0lfF1FvI_xJukEUFQ/edit?usp=sharing" class="button" target="_blank">Outside MCPS Access</a>
+            </div>
         </li>
         <li>Real World Examples 🌎
-            <ul>
-                <li><a href="https://mcps-link.com" target="_blank">MCPS Access</a></li>
-                <li><a href="https://outside-link.com" target="_blank">Outside MCPS Access</a></li>
-            </ul>
+            <div class="button-group">
+                <a href="https://mcps-link.com" class="button" target="_blank">MCPS Access</a>
+                <a href="https://outside-link.com" class="button" target="_blank">Outside MCPS Access</a>
+            </div>
         </li>
     </ul>
 
     <h2>Unit 3: Global Economics (includes Development)</h2>
     <ul>
         <li>Graphs Slideshow 📈
-            <ul>
-                <li><a href="https://docs.google.com/presentation/d/1Uohvpm72yacg-x83lAxa98nYRIL-a1RlZDrHdSRbNg0/edit?usp=sharing" target="_blank">MCPS Access</a></li>
-                <li><a href="https://outside-link.com" target="_blank">Outside MCPS Access</a></li>
-            </ul>
+            <div class="button-group">
+                <a href="https://docs.google.com/presentation/d/1Uohvpm72yacg-x83lAxa98nYRIL-a1RlZDrHdSRbNg0/edit?usp=sharing" class="button" target="_blank">MCPS Access</a>
+                <a href="https://docs.google.com/presentation/d/1aoAOkSzUQiOwLbhPC5j4qy8V5g0lfF1FvI_xJukEUFQ/edit?usp=sharing" class="button" target="_blank">Outside MCPS Access</a>
+            </div>
         </li>
         <li>Real World Examples 🌎
-            <ul>
-                <li><a href="https://mcps-link.com" target="_blank">MCPS Access</a></li>
-                <li><a href="https://outside-link.com" target="_blank">Outside MCPS Access</a></li>
-            </ul>
+            <div class="button-group">
+                <a href="https://mcps-link.com" class="button" target="_blank">MCPS Access</a>
+                <a href="https://outside-link.com" class="button" target="_blank">Outside MCPS Access</a>
+            </div>
         </li>
     </ul>
 
