--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         </li>
         <li>Real World Examples 🌎
             <div class="button-group">
-                <a href="https://mcps-link.com" class="button" target="_blank">MCPS Access</a>
-                <a href="https://outside-link.com" class="button" target="_blank">Outside MCPS Access</a>
+                <a href="https://docs.google.com/document/d/1dVuZeLcfZKMyX4ZhTyPGf5FO2Lg_Rbhpx2I8nJBbxbk/edit?usp=sharing" class="button" target="_blank">MCPS Access</a>
+                <a href="https://docs.google.com/document/d/1tc1W850QTX5AKfoVGsQjk27keAxREgdzC3qICswZhpo/edit?usp=sharing" class="button" target="_blank">Outside MCPS Access</a>
             </div>
         </li>
     </ul>
@@ -35,8 +35,8 @@
         </li>
         <li>Real World Examples 🌎
             <div class="button-group">
-                <a href="https://mcps-link.com" class="button" target="_blank">MCPS Access</a>
-                <a href="https://outside-link.com" class="button" target="_blank">Outside MCPS Access</a>
+                <a href="https://docs.google.com/document/d/1OlZ8_HXML9BpTj7YjmV7tyRvhe902lG6f5sGE5t_ruw/edit?usp=sharing" class="button" target="_blank">MCPS Access</a>
+                <a href="https://docs.google.com/document/d/1f45DicbRCBpamkJplu5xVy5vop-IXJGYJUswXTVByeQ/edit?usp=sharing" class="button" target="_blank">Outside MCPS Access</a>
             </div>
         </li>
     </ul>
@@ -51,8 +51,8 @@
         </li>
         <li>Real World Examples 🌎
             <div class="button-group">
-                <a href="https://mcps-link.com" class="button" target="_blank">MCPS Access</a>
-                <a href="https://outside-link.com" class="button" target="_blank">Outside MCPS Access</a>
+                <a href="https://docs.google.com/document/d/1crYaXZqtGggdTfE29V0X4JOBgx4dcFBbjqlelQNAzgo/edit?usp=sharing" class="button" target="_blank">MCPS Access</a>
+                <a href="https://docs.google.com/document/d/1VIJDLQxXtFqOPhJYNAw7daD28WNIBE8kxhMr6jKn8AE/edit?usp=sharing" class="button" target="_blank">Outside MCPS Access</a>
             </div>
         </li>
     </ul>
