--- a/index.html
+++ b/index.html
@@ -57,8 +57,20 @@
         </li>
     </ul>
 
+    <h2>📚 Study Resources</h2>
+    <ul>
+        <li>
+            <div class="button-group">
+                <a href="https://www.iitianacademy.com/ibdp-economics/sl/" class="button" target="_blank">Practice Questions (IITian Academy)</a>
+                <a href="https://www.ibmastery.com/blog/the-99-best-economics-resources" class="button" target="_blank">Economics Resources Database</a>
+                <a href="https://www.youtube.com/@EconplusDal" class="button" target="_blank">YouTube Videos (EconPlusDal)</a>
+                <a href="https://static1.squarespace.com/static/5e1db2db7fbc921eae5c733f/t/64085c5b5aecaa764826d8be/1678269533940/ib-academy.nl+Economics+SL.pdf" class="button" target="_blank">Econ Textbook (PDF)</a>
+            </div>
+        </li>
+    </ul>
+
     <footer>
-        <p>Made by K</p>
+        <p>Made by Kaan</p>
     </footer>
 </body>
 </html>
