--- a/index.html
+++ b/index.html
@@ -6,71 +6,53 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>IB Economics SL - Study Hub</h1>
-    <p>Access organized study materials for each unit! 📚</p>
+    <header>
+        <h1>📚 IB Economics SL Study Hub 📚</h1>
+        <p>Organized study materials!</p>
+    </header>
 
-    <h2>Unit 1: Microeconomics</h2>
-    <ul>
-        <li>Graphs Slideshow 📈
-            <div class="button-group">
-                <a href="https://docs.google.com/presentation/d/1Uohvpm72yacg-x83lAxa98nYRIL-a1RlZDrHdSRbNg0/edit?usp=sharing" class="button" target="_blank">MCPS Access</a>
-                <a href="https://docs.google.com/presentation/d/1aoAOkSzUQiOwLbhPC5j4qy8V5g0lfF1FvI_xJukEUFQ/edit?usp=sharing" class="button" target="_blank">Outside MCPS Access</a>
-            </div>
-        </li>
-        <li>Real World Examples 🌎
-            <div class="button-group">
-                <a href="https://docs.google.com/document/d/1dVuZeLcfZKMyX4ZhTyPGf5FO2Lg_Rbhpx2I8nJBbxbk/edit?usp=sharing" class="button" target="_blank">MCPS Access</a>
-                <a href="https://docs.google.com/document/d/1tc1W850QTX5AKfoVGsQjk27keAxREgdzC3qICswZhpo/edit?usp=sharing" class="button" target="_blank">Outside MCPS Access</a>
-            </div>
-        </li>
-    </ul>
+    <section class="unit">
+        <h2>Unit 1: Microeconomics</h2>
+        <div class="button-group">
+            <a href="https://docs.google.com/presentation/d/1Uohvpm72yacg-x83lAxa98nYRIL-a1RlZDrHdSRbNg0/edit?usp=sharing" class="button" target="_blank">Graphs Slideshow - MCPS</a>
+            <a href="https://docs.google.com/presentation/d/1aoAOkSzUQiOwLbhPC5j4qy8V5g0lfF1FvI_xJukEUFQ/edit?usp=sharing" class="button" target="_blank">Graphs Slideshow - Outside MCPS</a>
+            <a href="https://docs.google.com/document/d/1dVuZeLcfZKMyX4ZhTyPGf5FO2Lg_Rbhpx2I8nJBbxbk/edit?usp=sharing" class="button" target="_blank">Real World Examples - MCPS</a>
+            <a href="https://docs.google.com/document/d/1tc1W850QTX5AKfoVGsQjk27keAxREgdzC3qICswZhpo/edit?usp=sharing" class="button" target="_blank">Real World Examples - Outside MCPS</a>
+        </div>
+    </section>
 
-    <h2>Unit 2: Macroeconomics</h2>
-    <ul>
-        <li>Graphs Slideshow 📈
-            <div class="button-group">
-                <a href="https://docs.google.com/presentation/d/1Uohvpm72yacg-x83lAxa98nYRIL-a1RlZDrHdSRbNg0/edit?usp=sharing" class="button" target="_blank">MCPS Access</a>
-                <a href="https://docs.google.com/presentation/d/1aoAOkSzUQiOwLbhPC5j4qy8V5g0lfF1FvI_xJukEUFQ/edit?usp=sharing" class="button" target="_blank">Outside MCPS Access</a>
-            </div>
-        </li>
-        <li>Real World Examples 🌎
-            <div class="button-group">
-                <a href="https://docs.google.com/document/d/1OlZ8_HXML9BpTj7YjmV7tyRvhe902lG6f5sGE5t_ruw/edit?usp=sharing" class="button" target="_blank">MCPS Access</a>
-                <a href="https://docs.google.com/document/d/1f45DicbRCBpamkJplu5xVy5vop-IXJGYJUswXTVByeQ/edit?usp=sharing" class="button" target="_blank">Outside MCPS Access</a>
-            </div>
-        </li>
-    </ul>
+    <section class="unit">
+        <h2>Unit 2: Macroeconomics</h2>
+        <div class="button-group">
+            <a href="https://docs.google.com/presentation/d/1Uohvpm72yacg-x83lAxa98nYRIL-a1RlZDrHdSRbNg0/edit?usp=sharing" class="button" target="_blank">Graphs Slideshow - MCPS</a>
+            <a href="https://docs.google.com/presentation/d/1aoAOkSzUQiOwLbhPC5j4qy8V5g0lfF1FvI_xJukEUFQ/edit?usp=sharing" class="button" target="_blank">Graphs Slideshow - Outside MCPS</a>
+            <a href="https://docs.google.com/document/d/1OlZ8_HXML9BpTj7YjmV7tyRvhe902lG6f5sGE5t_ruw/edit?usp=sharing" class="button" target="_blank">Real World Examples - MCPS</a>
+            <a href="https://docs.google.com/document/d/1f45DicbRCBpamkJplu5xVy5vop-IXJGYJUswXTVByeQ/edit?usp=sharing" class="button" target="_blank">Real World Examples - Outside MCPS</a>
+        </div>
+    </section>
 
-    <h2>Unit 3: Global Economics (includes Development)</h2>
-    <ul>
-        <li>Graphs Slideshow 📈
-            <div class="button-group">
-                <a href="https://docs.google.com/presentation/d/1Uohvpm72yacg-x83lAxa98nYRIL-a1RlZDrHdSRbNg0/edit?usp=sharing" class="button" target="_blank">MCPS Access</a>
-                <a href="https://docs.google.com/presentation/d/1aoAOkSzUQiOwLbhPC5j4qy8V5g0lfF1FvI_xJukEUFQ/edit?usp=sharing" class="button" target="_blank">Outside MCPS Access</a>
-            </div>
-        </li>
-        <li>Real World Examples 🌎
-            <div class="button-group">
-                <a href="https://docs.google.com/document/d/1crYaXZqtGggdTfE29V0X4JOBgx4dcFBbjqlelQNAzgo/edit?usp=sharing" class="button" target="_blank">MCPS Access</a>
-                <a href="https://docs.google.com/document/d/1VIJDLQxXtFqOPhJYNAw7daD28WNIBE8kxhMr6jKn8AE/edit?usp=sharing" class="button" target="_blank">Outside MCPS Access</a>
-            </div>
-        </li>
-    </ul>
+    <section class="unit">
+        <h2>Unit 3: Global Economics (incl. Development)</h2>
+        <div class="button-group">
+            <a href="https://docs.google.com/presentation/d/1Uohvpm72yacg-x83lAxa98nYRIL-a1RlZDrHdSRbNg0/edit?usp=sharing" class="button" target="_blank">Graphs Slideshow - MCPS</a>
+            <a href="https://docs.google.com/presentation/d/1aoAOkSzUQiOwLbhPC5j4qy8V5g0lfF1FvI_xJukEUFQ/edit?usp=sharing" class="button" target="_blank">Graphs Slideshow - Outside MCPS</a>
+            <a href="https://docs.google.com/document/d/1crYaXZqtGggdTfE29V0X4JOBgx4dcFBbjqlelQNAzgo/edit?usp=sharing" class="button" target="_blank">Real World Examples - MCPS</a>
+            <a href="https://docs.google.com/document/d/1VIJDLQxXtFqOPhJYNAw7daD28WNIBE8kxhMr6jKn8AE/edit?usp=sharing" class="button" target="_blank">Real World Examples - Outside MCPS</a>
+        </div>
+    </section>
 
-    <h2>📚 Study Resources</h2>
-    <ul>
-        <li>
-            <div class="button-group">
-                <a href="https://www.iitianacademy.com/ibdp-economics/sl/" class="button" target="_blank">Practice Questions (IITian Academy)</a>
-                <a href="https://www.ibmastery.com/blog/the-99-best-economics-resources" class="button" target="_blank">Economics Resources Database</a>
-                <a href="https://www.youtube.com/@EconplusDal" class="button" target="_blank">YouTube Videos (EconPlusDal)</a>
-                <a href="https://static1.squarespace.com/static/5e1db2db7fbc921eae5c733f/t/64085c5b5aecaa764826d8be/1678269533940/ib-academy.nl+Economics+SL.pdf" class="button" target="_blank">Econ Textbook (PDF)</a>
-            </div>
-        </li>
-    </ul>
+    <section class="unit">
+        <h2>Extra Study Resources 🌟</h2>
+        <div class="button-group">
+            <a href="https://www.iitianacademy.com/ibdp-economics/sl/" class="button" target="_blank">Practice Questions - IITian Academy</a>
+            <a href="https://www.ibmastery.com/blog/the-99-best-economics-resources" class="button" target="_blank">99+ Econ Resources</a>
+            <a href="https://www.youtube.com/@EconplusDal" class="button" target="_blank">YouTube - EconplusDal</a>
+            <a href="https://static1.squarespace.com/static/5e1db2db7fbc921eae5c733f/t/64085c5b5aecaa764826d8be/1678269533940/ib-academy.nl+Economics+SL.pdf" class="button" target="_blank">Full Economics SL Textbook (PDF)</a>
+        </div>
+    </section>
 
     <footer>
-        <p>Made by Kaan</p>
+        <p>Made so bruno doesn't fail. By Kaan</p>
     </footer>
 </body>
 </html>
