--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="container">
         <h1>IB Economics SL - Study Hub</h1>
         <p> Organized study materials for each unit 📚</p>
+        <p> MCPS = Accesible through MCPS account. Outside MCPS = Accesible through non-mcps account </p>
 
         <h2>Units</h2>
         <ul>
