--- a/index.html
+++ b/index.html
@@ -2,70 +2,57 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IB Economics SL - Study Hub</title>
+    <title>IB Econ SL Study Hub</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <h1>IB Economics SL - Study Hub</h1>
-        <p> Organized study materials for each unit 📚</p>
-        <p> MCPS = Accesible through MCPS account. Outside MCPS = Accesible through non-mcps account </p>
+    <header>
+        <h1>📚 IB Economics SL Study Hub 📚</h1>
+        <p>Organized study materials, just for you!</p>
+    </header>
 
-        <h2>Units</h2>
-        <ul>
-            <li>Unit 1: Introduction to Economics
-                <div class="button-group">
-                    <a href="https://www.youtube.com/watch?v=5x-1Ue4JmZA" class="button" target="_blank">Video Overview</a>
-                    <a href="https://www.econplusdal.com/ib-sl" class="button" target="_blank">EconPlusDal Notes</a>
-                </div>
-            </li>
+    <section class="unit">
+        <h2>Unit 1: Microeconomics</h2>
+        <div class="button-group">
+            <a href="https://docs.google.com/presentation/d/1Uohvpm72yacg-x83lAxa98nYRIL-a1RlZDrHdSRbNg0/edit?usp=sharing" class="button" target="_blank">Graphs Slideshow - MCPS</a>
+            <a href="https://docs.google.com/presentation/d/1aoAOkSzUQiOwLbhPC5j4qy8V5g0lfF1FvI_xJukEUFQ/edit?usp=sharing" class="button" target="_blank">Graphs Slideshow - Outside MCPS</a>
+            <a href="https://docs.google.com/document/d/1dVuZeLcfZKMyX4ZhTyPGf5FO2Lg_Rbhpx2I8nJBbxbk/edit?usp=sharing" class="button" target="_blank">Real World Examples - MCPS</a>
+            <a href="https://docs.google.com/document/d/1tc1W850QTX5AKfoVGsQjk27keAxREgdzC3qICswZhpo/edit?usp=sharing" class="button" target="_blank">Real World Examples - Outside MCPS</a>
+        </div>
+    </section>
 
-            <li>Unit 2: Microeconomics
-                <div class="button-group">
-                    <a href="https://www.youtube.com/watch?v=fdvOnZsm-3E" class="button" target="_blank">Video Overview</a>
-                    <a href="https://www.econplusdal.com/ib-micro" class="button" target="_blank">EconPlusDal Notes</a>
-                </div>
-            </li>
+    <section class="unit">
+        <h2>Unit 2: Macroeconomics</h2>
+        <div class="button-group">
+            <a href="https://docs.google.com/presentation/d/1Uohvpm72yacg-x83lAxa98nYRIL-a1RlZDrHdSRbNg0/edit?usp=sharing" class="button" target="_blank">Graphs Slideshow - MCPS</a>
+            <a href="https://docs.google.com/presentation/d/1aoAOkSzUQiOwLbhPC5j4qy8V5g0lfF1FvI_xJukEUFQ/edit?usp=sharing" class="button" target="_blank">Graphs Slideshow - Outside MCPS</a>
+            <a href="https://docs.google.com/document/d/1OlZ8_HXML9BpTj7YjmV7tyRvhe902lG6f5sGE5t_ruw/edit?usp=sharing" class="button" target="_blank">Real World Examples - MCPS</a>
+            <a href="https://docs.google.com/document/d/1f45DicbRCBpamkJplu5xVy5vop-IXJGYJUswXTVByeQ/edit?usp=sharing" class="button" target="_blank">Real World Examples - Outside MCPS</a>
+        </div>
+    </section>
 
-            <li>Unit 3: Macroeconomics
-                <div class="button-group">
-                    <a href="https://www.youtube.com/watch?v=CrwDVxZ5QU8" class="button" target="_blank">Video Overview</a>
-                    <a href="https://www.econplusdal.com/ib-macro" class="button" target="_blank">EconPlusDal Notes</a>
-                </div>
-            </li>
-        </ul>
+    <section class="unit">
+        <h2>Unit 3: Global Economics (incl. Development)</h2>
+        <div class="button-group">
+            <a href="https://docs.google.com/presentation/d/1Uohvpm72yacg-x83lAxa98nYRIL-a1RlZDrHdSRbNg0/edit?usp=sharing" class="button" target="_blank">Graphs Slideshow - MCPS</a>
+            <a href="https://docs.google.com/presentation/d/1aoAOkSzUQiOwLbhPC5j4qy8V5g0lfF1FvI_xJukEUFQ/edit?usp=sharing" class="button" target="_blank">Graphs Slideshow - Outside MCPS</a>
+            <a href="https://docs.google.com/document/d/1crYaXZqtGggdTfE29V0X4JOBgx4dcFBbjqlelQNAzgo/edit?usp=sharing" class="button" target="_blank">Real World Examples - MCPS</a>
+            <a href="https://docs.google.com/document/d/1VIJDLQxXtFqOPhJYNAw7daD28WNIBE8kxhMr6jKn8AE/edit?usp=sharing" class="button" target="_blank">Real World Examples - Outside MCPS</a>
+        </div>
+    </section>
 
-        <h2>Study Resources 📚</h2>
-        <ul>
-            <li>Practice Questions 📝
-                <div class="button-group">
-                    <a href="https://www.iitianacademy.com/ibdp-economics/sl/" class="button" target="_blank">iitianacademy</a>
-                </div>
-            </li>
+    <section class="unit">
+        <h2>Extra Study Resources 🌟</h2>
+        <div class="button-group">
+            <a href="https://www.iitianacademy.com/ibdp-economics/sl/" class="button" target="_blank">Practice Questions - IITian Academy</a>
+            <a href="https://www.ibmastery.com/blog/the-99-best-economics-resources" class="button" target="_blank">99+ Econ Resources</a>
+            <a href="https://www.youtube.com/@EconplusDal" class="button" target="_blank">YouTube - EconplusDal</a>
+            <a href="https://static1.squarespace.com/static/5e1db2db7fbc921eae5c733f/t/64085c5b5aecaa764826d8be/1678269533940/ib-academy.nl+Economics+SL.pdf" class="button" target="_blank">Full Economics SL Textbook (PDF)</a>
+        </div>
+    </section>
 
-            <li>Resource Database 📚
-                <div class="button-group">
-                    <a href="https://www.ibmastery.com/blog/the-99-best-economics-resources" class="button" target="_blank">IBMastery</a>
-                </div>
-            </li>
-
-            <li>YouTube Lessons 🎥
-                <div class="button-group">
-                    <a href="https://www.youtube.com/@EconplusDal" class="button" target="_blank">EconplusDal Channel</a>
-                </div>
-            </li>
-
-            <li>Textbook PDF 📖
-                <div class="button-group">
-                    <a href="https://static1.squarespace.com/static/5e1db2db7fbc921eae5c733f/t/64085c5b5aecaa764826d8be/1678269533940/ib-academy.nl+Economics+SL.pdf" class="button" target="_blank">IB Academy Textbook</a>
-                </div>
-            </li>
-        </ul>
-
-        <footer>
-            <p>Made so bruno doesn't fail! By Kaan</p>
-        </footer>
-    </div>
+    <footer>
+        <p>Made with ❤️ by K</p>
+    </footer>
 </body>
 </html>
