--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </section>
 
     <footer>
-        <p>Bruno: get off snapmap. by Kaan</p>
+        <p>By Kaan 🫗</p>
     </footer>
 </body>
 </html>
