--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     
     <section class="coming-soon">
         <h2>🚧 Coming Soon! 🚧</h2>
-        <p>Noah and I are currently building an interactive quiz that lets you practice drawing IB Economics graphs! 📈</p>
+        <p>Noah and I are currently building an interactive quiz that lets you practice drawing IB Economics graphs 📈</p>
         <p>You'll receive feedback on your diagrams based on what you missed like labels and shifts.</p>
         <p>Will be done soon</p>
     </section>
