--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <p>Organized study materials. MCPS=Link for MCPS accounts. Outside MCPS=Link for external accounts</p>
     </header>
 
-    <section class="unit">
+    <section class="unit fade-in">
         <h2>Unit 1: Microeconomics</h2>
         <div class="button-group">
             <a href="https://docs.google.com/presentation/d/1Uohvpm72yacg-x83lAxa98nYRIL-a1RlZDrHdSRbNg0/edit?usp=sharing" class="button" target="_blank">Graphs Slideshow - MCPS</a>
@@ -21,7 +21,7 @@
         </div>
     </section>
 
-    <section class="unit">
+    <section class="unit fade-in">
         <h2>Unit 2: Macroeconomics</h2>
         <div class="button-group">
             <a href="https://docs.google.com/presentation/d/1Uohvpm72yacg-x83lAxa98nYRIL-a1RlZDrHdSRbNg0/edit?usp=sharing" class="button" target="_blank">Graphs Slideshow - MCPS</a>
@@ -31,7 +31,7 @@
         </div>
     </section>
 
-    <section class="unit">
+    <section class="unit fade-in">
         <h2>Unit 3: Global Economics (incl. Development)</h2>
         <div class="button-group">
             <a href="https://docs.google.com/presentation/d/1Uohvpm72yacg-x83lAxa98nYRIL-a1RlZDrHdSRbNg0/edit?usp=sharing" class="button" target="_blank">Graphs Slideshow - MCPS</a>
@@ -41,7 +41,7 @@
         </div>
     </section>
 
-    <section class="unit">
+    <section class="unit fade-in">
         <h2>Extra Study Resources 🌟</h2>
         <div class="button-group">
             <a href="https://www.iitianacademy.com/ibdp-economics/sl/" class="button" target="_blank">Practice Questions - IITian Academy</a>
@@ -51,9 +51,11 @@
         </div>
     </section>
 
-    
-    <section class="coming-soon">
+    <section class="coming-soon fade-in">
         <h2>🚧 Coming Soon! 🚧</h2>
+        <div class="hourglass-container">
+            <div class="hourglass"></div>
+        </div>
         <p>Noah and I are currently building an interactive quiz that lets you practice drawing IB Economics graphs 📈</p>
         <p>You'll receive feedback on your diagrams based on what you missed like labels and shifts.</p>
         <p>Will be done soon</p>
