--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
         <p>Noah and I are currently building an interactive quiz that lets you practice drawing IB Economics graphs 📈</p>
         <p>You'll receive feedback on your diagrams based on what you missed like labels and shifts.</p>
-        <p>Will be done soon</p>
+        <p>Will be done soon...</p>
     </section>
 
     <footer>
