--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class="hourglass"></div>
         </div>
         <p>Noah and I are currently building an interactive quiz that lets you practice drawing IB Economics graphs 📈</p>
-        <p>You'll receive your drawn graph along with the actual correct graph so you can compare and see what you missed</p>
+        <p>You'll receive your drawn graph along with the actual correct graph so you can compare and see what you missed :)</p>
         <p>Will be done soon...</p>
     </section>
 
