--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="hourglass-container">
             <div class="hourglass"></div>
         </div>
-        <p>Noah and I are currently building an interactive quiz that lets you practice drawing IB Economics graphs 📈</p>
+        <p>Noah and I are currently building an interactive quiz that lets you practice drawing IB Economics graphs. 📈</p>
         <p>You'll receive your drawn graph along with the actual correct graph so you can compare and see what you missed!!</p>
         <p>Will be done soon...</p>
     </section>
