--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>IB Econ SL Study Hub</title>
+    <title>IB Econ SL Study Hub!</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
