--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <h1>📚 IB Economics SL Study Hub 📚</h1>
-        <p>Organized study materials. MCPS=Link for MCPS accounts. Outside MCPS=Link for external accounts</p>
+        <p>Organized study materials. MCPS=Link for MCPS accounts. Outside MCPS=Link for external accounts.</p>
     </header>
 
     <section class="unit fade-in">
