--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </section>
 
     <section class="coming-soon fade-in">
-        <h2>🚧 Coming Soon! 🚧</h2>
+        <h2>🚧 Coming Soon!!! 🚧</h2>
         <div class="hourglass-container">
             <div class="hourglass"></div>
         </div>
