Added Graph Practice

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>IB Econ SL Study Hub!</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <h1>📚 IB Economics SL Study Hub 📚</h1>
@@ -14,40 +16,55 @@
     <section class="unit fade-in">
         <h2>Unit 1: Microeconomics</h2>
         <div class="button-group">
-            <a href="https://docs.google.com/presentation/d/1Uohvpm72yacg-x83lAxa98nYRIL-a1RlZDrHdSRbNg0/edit?usp=sharing" class="button" target="_blank">Graphs Slideshow - MCPS</a>
-            <a href="https://docs.google.com/presentation/d/1aoAOkSzUQiOwLbhPC5j4qy8V5g0lfF1FvI_xJukEUFQ/edit?usp=sharing" class="button" target="_blank">Graphs Slideshow - Outside MCPS</a>
-            <a href="https://docs.google.com/document/d/1dVuZeLcfZKMyX4ZhTyPGf5FO2Lg_Rbhpx2I8nJBbxbk/edit?usp=sharing" class="button" target="_blank">Real World Examples - MCPS</a>
-            <a href="https://docs.google.com/document/d/1tc1W850QTX5AKfoVGsQjk27keAxREgdzC3qICswZhpo/edit?usp=sharing" class="button" target="_blank">Real World Examples - Outside MCPS</a>
+            <a href="https://docs.google.com/presentation/d/1Uohvpm72yacg-x83lAxa98nYRIL-a1RlZDrHdSRbNg0/edit?usp=sharing"
+                class="button" target="_blank">Graphs Slideshow - MCPS</a>
+            <a href="https://docs.google.com/presentation/d/1aoAOkSzUQiOwLbhPC5j4qy8V5g0lfF1FvI_xJukEUFQ/edit?usp=sharing"
+                class="button" target="_blank">Graphs Slideshow - Outside MCPS</a>
+            <a href="https://docs.google.com/document/d/1dVuZeLcfZKMyX4ZhTyPGf5FO2Lg_Rbhpx2I8nJBbxbk/edit?usp=sharing"
+                class="button" target="_blank">Real World Examples - MCPS</a>
+            <a href="https://docs.google.com/document/d/1tc1W850QTX5AKfoVGsQjk27keAxREgdzC3qICswZhpo/edit?usp=sharing"
+                class="button" target="_blank">Real World Examples - Outside MCPS</a>
         </div>
     </section>
 
     <section class="unit fade-in">
         <h2>Unit 2: Macroeconomics</h2>
         <div class="button-group">
-            <a href="https://docs.google.com/presentation/d/1Uohvpm72yacg-x83lAxa98nYRIL-a1RlZDrHdSRbNg0/edit?usp=sharing" class="button" target="_blank">Graphs Slideshow - MCPS</a>
-            <a href="https://docs.google.com/presentation/d/1aoAOkSzUQiOwLbhPC5j4qy8V5g0lfF1FvI_xJukEUFQ/edit?usp=sharing" class="button" target="_blank">Graphs Slideshow - Outside MCPS</a>
-            <a href="https://docs.google.com/document/d/1OlZ8_HXML9BpTj7YjmV7tyRvhe902lG6f5sGE5t_ruw/edit?usp=sharing" class="button" target="_blank">Real World Examples - MCPS</a>
-            <a href="https://docs.google.com/document/d/1f45DicbRCBpamkJplu5xVy5vop-IXJGYJUswXTVByeQ/edit?usp=sharing" class="button" target="_blank">Real World Examples - Outside MCPS</a>
+            <a href="https://docs.google.com/presentation/d/1Uohvpm72yacg-x83lAxa98nYRIL-a1RlZDrHdSRbNg0/edit?usp=sharing"
+                class="button" target="_blank">Graphs Slideshow - MCPS</a>
+            <a href="https://docs.google.com/presentation/d/1aoAOkSzUQiOwLbhPC5j4qy8V5g0lfF1FvI_xJukEUFQ/edit?usp=sharing"
+                class="button" target="_blank">Graphs Slideshow - Outside MCPS</a>
+            <a href="https://docs.google.com/document/d/1OlZ8_HXML9BpTj7YjmV7tyRvhe902lG6f5sGE5t_ruw/edit?usp=sharing"
+                class="button" target="_blank">Real World Examples - MCPS</a>
+            <a href="https://docs.google.com/document/d/1f45DicbRCBpamkJplu5xVy5vop-IXJGYJUswXTVByeQ/edit?usp=sharing"
+                class="button" target="_blank">Real World Examples - Outside MCPS</a>
         </div>
     </section>
 
     <section class="unit fade-in">
         <h2>Unit 3: Global Economics (incl. Development)</h2>
         <div class="button-group">
-            <a href="https://docs.google.com/presentation/d/1Uohvpm72yacg-x83lAxa98nYRIL-a1RlZDrHdSRbNg0/edit?usp=sharing" class="button" target="_blank">Graphs Slideshow - MCPS</a>
-            <a href="https://docs.google.com/presentation/d/1aoAOkSzUQiOwLbhPC5j4qy8V5g0lfF1FvI_xJukEUFQ/edit?usp=sharing" class="button" target="_blank">Graphs Slideshow - Outside MCPS</a>
-            <a href="https://docs.google.com/document/d/1crYaXZqtGggdTfE29V0X4JOBgx4dcFBbjqlelQNAzgo/edit?usp=sharing" class="button" target="_blank">Real World Examples - MCPS</a>
-            <a href="https://docs.google.com/document/d/1VIJDLQxXtFqOPhJYNAw7daD28WNIBE8kxhMr6jKn8AE/edit?usp=sharing" class="button" target="_blank">Real World Examples - Outside MCPS</a>
+            <a href="https://docs.google.com/presentation/d/1Uohvpm72yacg-x83lAxa98nYRIL-a1RlZDrHdSRbNg0/edit?usp=sharing"
+                class="button" target="_blank">Graphs Slideshow - MCPS</a>
+            <a href="https://docs.google.com/presentation/d/1aoAOkSzUQiOwLbhPC5j4qy8V5g0lfF1FvI_xJukEUFQ/edit?usp=sharing"
+                class="button" target="_blank">Graphs Slideshow - Outside MCPS</a>
+            <a href="https://docs.google.com/document/d/1crYaXZqtGggdTfE29V0X4JOBgx4dcFBbjqlelQNAzgo/edit?usp=sharing"
+                class="button" target="_blank">Real World Examples - MCPS</a>
+            <a href="https://docs.google.com/document/d/1VIJDLQxXtFqOPhJYNAw7daD28WNIBE8kxhMr6jKn8AE/edit?usp=sharing"
+                class="button" target="_blank">Real World Examples - Outside MCPS</a>
         </div>
     </section>
 
     <section class="unit fade-in">
         <h2>Extra Study Resources 🌟</h2>
         <div class="button-group">
-            <a href="https://www.iitianacademy.com/ibdp-economics/sl/" class="button" target="_blank">Practice Questions - IITian Academy</a>
-            <a href="https://www.ibmastery.com/blog/the-99-best-economics-resources" class="button" target="_blank">99+ Econ Resources</a>
+            <a href="https://www.iitianacademy.com/ibdp-economics/sl/" class="button" target="_blank">Practice Questions
+                - IITian Academy</a>
+            <a href="https://www.ibmastery.com/blog/the-99-best-economics-resources" class="button" target="_blank">99+
+                Econ Resources</a>
             <a href="https://www.youtube.com/@EconplusDal" class="button" target="_blank">YouTube - EconplusDal</a>
-            <a href="https://static1.squarespace.com/static/5e1db2db7fbc921eae5c733f/t/64085c5b5aecaa764826d8be/1678269533940/ib-academy.nl+Economics+SL.pdf" class="button" target="_blank">Full Economics SL Textbook (PDF)</a>
+            <a href="https://static1.squarespace.com/static/5e1db2db7fbc921eae5c733f/t/64085c5b5aecaa764826d8be/1678269533940/ib-academy.nl+Economics+SL.pdf"
+                class="button" target="_blank">Full Economics SL Textbook (PDF)</a>
         </div>
     </section>
 
@@ -56,13 +73,18 @@
         <div class="hourglass-container">
             <div class="hourglass"></div>
         </div>
-        <p>Noah and I are currently building an interactive quiz that lets you practice drawing IB Economics graphs 📈</p>
+        <p>Noah and I are currently building an interactive quiz that lets you practice drawing IB Economics graphs 📈
+        </p>
         <p>You'll receive feedback on your diagrams based on what you missed like labels and shifts.</p>
         <p>Will be done soon...</p>
+
+        <button onclick="window.location.href='/graph'">Graph Practice!</button>
+
     </section>
 
     <footer>
         <p>By Kaan 🫗</p>
     </footer>
 </body>
+
 </html>
