--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <p>You'll receive feedback on your diagrams based on what you missed like labels and shifts.</p>
         <p>Will be done soon...</p>
 
-        <button onclick="window.location.href='/graph'">Graph Practice!</button>
+        <button onclick="window.location.href='/graphs'">Graph Practice!</button>
 
     </section>
 
