Fixed link to graphs? 2

--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
         <p>You'll receive feedback on your diagrams based on what you missed like labels and shifts.</p>
         <p>Will be done soon...</p>
 
-        <button onclick="window.location.href='/graphs'">Graph Practice!</button>
+        <a href="graphs.html">
+            <h1>Graph Practice!</h1>
+        </a>
 
     </section>
 
